# shortcake

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: license.rs
.github/workflows/: ci.yml  main.yml  publish.yml
benches/: shortcake.rs
examples/: protocol.rs
src/: ciphersuite.rs  commitment.rs  companion.rs  dhkem.rs  error.rs  errors.rs  initiator.rs  kdf.rs  key_exchange.rs  lib.rs  messages.rs  mlkem.rs  primary.rs  protocol.rs  responder.rs  sas.rs  util.rs  verification.rs  x25519.rs  xwing.rs
src/tests/: mod.rs  test_protocol.rs
tests/: dhkem_p256_test_vectors.txt  dhkem_p384_test_vectors.txt  full_test_vectors.txt  integration.rs  integration_mlkem.rs  serialization.rs  test_vectors.rs  test_vectors_mlkem.rs  zeroize.rs
