[package]
name = "shortcake"
version = "0.1.0-pre.4"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "A generic Rust implementation of the Pasini-Vaudenay 3-move SAS-based authenticated key agreement protocol"
repository = "https://github.com/facebook/shortcake"
keywords = ["cryptography", "sas", "key-agreement", "authentication"]
categories = ["cryptography", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["getrandom"]
std = []
serde = ["dep:serde", "dep:hybrid-array"]
getrandom = ["dep:getrandom"]
xwing = ["dep:x-wing", "dep:sha3"]
dhkem-p256 = ["dep:elliptic-curve", "dep:hkdf", "dep:p256", "dep:sha2"]
dhkem-p384 = ["dep:elliptic-curve", "dep:hkdf", "dep:p384", "dep:sha2"]

[dependencies]
digest = { version = "0.11.2", default-features = false }
hybrid-array = { version = "0.4", default-features = false, features = ["serde"], optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
rand_core = { version = "0.10", default-features = false }
getrandom = { version = "0.4", features = ["sys_rng"], optional = true }

# Optional dependencies for xwing ciphersuite
x-wing = { version = "0.1.0-rc.0", default-features = false, features = ["zeroize"], optional = true }
sha3 = { version = "0.11.0-rc.9", default-features = false, optional = true }

# Optional dependencies for DHKEM ciphersuites (RFC 9180)
elliptic-curve = { version = "0.14.0-rc", default-features = false, features = ["ecdh", "sec1"], optional = true }
hkdf = { version = "0.13", default-features = false, optional = true }
p256 = { version = "0.14.0-rc", default-features = false, features = ["ecdh"], optional = true }
p384 = { version = "0.14.0-rc", default-features = false, features = ["ecdh"], optional = true }
sha2 = { version = "0.11", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5"
getrandom = { version = "0.4", features = ["sys_rng"] }
hex = "0.4"
postcard = { version = "1", features = ["alloc"] }
rand_chacha = "0.10"

[[example]]
name = "protocol"
required-features = ["xwing", "serde"]

[[bench]]
name = "shortcake"
harness = false
